--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "sass": "1.53.0",
     "stylelint": "13.13.1",
     "webpack": "4.42.0",
-    "webpack-stream": "5.2.1"
+    "webpack-stream": "5.2.1",
+    "imask": "6.4.3",
+    "pristinejs": "0.1.9"
   },
   "engines": {
     "node": ">=16.15.1"
